sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var beg:Int=0;
  var end:Int=getValueCount()-2;
  var sp1:Boolean=false;
  var sp2:Boolean=false;
  do {
    sp1=false
    sp2=false
    for (i <- beg to end) {
      if (!isSmaller(i,i+1)) {
        swap(i,i+1)
        sp1=true
      }
    }
    end-=1
    for (i <- beg to end) {
      if (!isSmaller(end-i,end-i+1)) {
        swap(end-i,end-i+1)
        sp=true
      }
    }
    beg+=1
  } while (sp1==true || sp2==true)
}
//a voir